dom/plugins/base/nsPluginInstanceOwner.cpp
@@ -3727,6 +3727,10 @@ nsPluginInstanceOwner::GetContentsScaleFactor(double *result)
 {
   NS_ENSURE_ARG_POINTER(result);
   double scaleFactor = 1.0;
+  // On Mac, device pixels need to be translated to (and from) "display pixels"
+  // for plugins. On other platforms, plugin coordinates are always in device
+  // pixels.
+#if defined(XP_MACOSX)
   if (mWidget) {
     scaleFactor = mWidget->GetDefaultScale();
   } else {
@@ -3746,6 +3750,7 @@ nsPluginInstanceOwner::GetContentsScaleFactor(double *result)
       }
     }
   }
+#endif
   *result = scaleFactor;
   return NS_OK;
 }
